[workspace]
members = [
    "crates/*",
]

[workspace.dependencies]
ipc-rpc = "1.2.6"
futures = "0.3"
ipc-channel = "0.16.0"
log = "0.4"
schemars = "0.8.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.85"
tokio = { version = "1.7", features = ["sync", "rt-multi-thread", "time", "macros", "process"] }
uuid = { version = "1.1.2", features = ["serde", "v4"] }
env_logger = "0.8"
test-log = "0.2.11"